# agent-loop

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_loop/: __init__.py  cli.py  evals.py  mcp_server.py  memory.py  models.py  offline.py  runtime.py  tools.py  verify.py
data/: telemetry.json
tasks/: tasks.json
tests/: test_agent.py
